--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@types/react-native-vector-icons": "^6.4.18",
     "react": "19.0.0",
-    "react-native": "0.79.2"
+    "react-hook-form": "^7.57.0",
+    "react-native": "0.79.2",
+    "react-native-image-picker": "^8.2.1",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -27,6 +31,7 @@
     "@types/jest": "^29.5.13",
     "@types/react": "^19.0.0",
     "@types/react-test-renderer": "^19.0.0",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
