--- a/package.json
+++ b/package.json
@@ -10,12 +10,29 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-navigation/drawer": "^7.4.1",
+    "@react-navigation/native": "^7.1.10",
+    "@react-navigation/native-stack": "^7.3.14",
+    "@react-navigation/stack": "^7.3.3",
+    "@tanstack/react-query": "^5.80.3",
     "@types/react-native-vector-icons": "^6.4.18",
+    "axios": "^1.9.0",
+    "dayjs": "^1.11.13",
+    "jwt-decode": "^4.0.0",
     "react": "19.0.0",
     "react-hook-form": "^7.57.0",
     "react-native": "0.79.2",
+    "react-native-device-info": "^14.0.4",
+    "react-native-gesture-handler": "^2.25.0",
     "react-native-image-picker": "^8.2.1",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-picker-select": "^9.3.1",
+    "react-native-reanimated": "^3.18.0",
+    "react-native-safe-area-context": "^5.4.1",
+    "react-native-screens": "^4.11.1",
+    "react-native-vector-icons": "^10.2.0",
+    "uuid": "^11.1.0",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -27,7 +44,7 @@
     "@react-native/babel-preset": "0.79.2",
     "@react-native/eslint-config": "0.79.2",
     "@react-native/metro-config": "0.79.2",
-    "@react-native/typescript-config": "0.79.2",
+    "@react-native/typescript-config": "^0.79.2",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.0.0",
     "@types/react-test-renderer": "^19.0.0",
